opa/constraints/nodeport-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sNodeportCheck
metadata:
  name: denynodeportless
spec:
  match:
    excludedNamespaces:
      - kube-public
      - kube-system
      - kyverno
      - gatekeeper-system
    kinds:
      - apiGroups: [""]
        kinds: 
          - Service
  parameters:
    minNodePort: 31000
